--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,5 +4,14 @@
     <string name="title_list">카페 목록</string>
     <string name="title_review">리뷰 작성</string>
     <string name="title_myPage">마이페이지</string>
-    <string name="add_cafe">카페추가</string>
+    <string name="cafe_detail">카페 디테일</string>
+    <string name="cafe_delete">카페 삭제</string>
+    <string name="cafe_detail_more">카페 리뷰 더보기</string>
+    <string name="cafe_modify">카페 수정</string>
+    <string name="cafe_registration">카페 추가</string>
+    <string name="cafe_list">카페 리스트</string>
+    <string name="search">카페 검색</string>
+    <string name="myPage_grade">회원 등급</string>
+    <string name="review_comment">리뷰 작성</string>
+    <string name="review_tag">리뷰 태그</string>
 </resources>
